// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment should redirect 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Redirect\\",\\"merchantReference\\",\\"mocked_orderNo\\",\\"signature\\",\\"mocked_signature\\"]",
      "error": false,
    },
  ],
]
`;

exports[`Payment should return 3d json response 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Adyen3D\\",\\"IssuerURL\\",\\"mocked_url\\",\\"PaRequest\\",\\"mocked_PaReq\\",\\"MD\\",\\"mocked_MD\\",\\"merchantReference\\",\\"mocked_orderNo\\",\\"signature\\",\\"mocked_signature\\"]",
      "error": false,
    },
  ],
]
`;

exports[`Payment should return 3ds2 json response 1`] = `
Array [
  Array [
    Object {
      "continueUrl": "[\\"Adyen-Adyen3DS2\\",\\"resultCode\\",\\"IdentifyShopper\\",\\"orderNo\\",\\"mocked_orderNo\\"]",
      "error": false,
      "order": Object {
        "getPaymentInstruments": [MockFunction] {
          "calls": Array [
            Array [
              "AdyenComponent",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Object {
                "0": Object {
                  "custom": Object {
                    "adyenAction": "mocked_action",
                    "adyenMD": "mocked_adyen_MD",
                    "adyenPaymentData": "mocked_adyen_payment_data",
                    "adyenRedirectURL": "https://some_mocked_url/signature",
                  },
                },
                "iterator": [Function],
                "toArray": [MockFunction] {
                  "calls": Array [
                    Array [],
                  ],
                  "results": Array [
                    Object {
                      "type": "return",
                      "value": Array [
                        Object {
                          "custom": Object {
                            "adyenAction": "mocked_action",
                            "adyenMD": "mocked_adyen_MD",
                            "adyenPaymentData": "mocked_adyen_payment_data",
                            "adyenRedirectURL": "https://some_mocked_url/signature",
                          },
                        },
                      ],
                    },
                  ],
                },
              },
            },
          ],
        },
        "orderNo": "mocked_orderNo",
      },
    },
  ],
]
`;

exports[`Payment should return json with error details when payment is unsuccessful 1`] = `
Array [
  Array [
    Object {
      "error": true,
      "errorMessage": "mocked_error.payment.not.valid",
    },
  ],
]
`;
